2007-??-?? CLAM 1.0.1 SVN $Revision$
''
 * FLTK fully dropped
 
2007-03-20 CLAM 1.0.0
'The Berlin release'
 * SVN Revision: 9881
 * Funtional Ladspa host

2007-03-18 CLAM 0.99.0
'That will be CLAM 1.0 release'
 * SVN Revision: 9864
 * New binary in NetworkEditor/ called OfflinePlayer to batch-process
   clam network files given an input and output audio file.
 * Fixes in the modconf to work in suse (thanks Toni)
 * Updated Fedora Core packaging
 * PortAudio network player backend:
   * PortAudio available in all platforms, including Linux.
   * Network player gets priority boost in Linux.
   * Discarded OSS API so in linux it uses Alsa (#Closes 200).
   * Xruns are notified on the console.
   * Available apis and devices are notified on the console.
   * Stream is closed and open on network start and stop.
 * All network players
   * AudioSink/Sources does the copy on the Network 'Do' instead
     of an explicit one.
   * The player just sets the device buffer using the new 
   * XNetworkPlayer::IsWorking to test whether a given NP is available.
   * Backends uses the framesize set by the backend
   * TopologyChanged protocol removed (Closes #174).
 * Flow control
   * Added a NaiveFlowControl which is less than optimal but
     it has been developed in a test driven way considering 
     most of the cases PushFlowControl was failing and some
     others. See the test cases for more info. (Closes #175)
   * No need to explicitly set the flow control to a network; by
     default it has a Naive one. Now all CLAM code uses the default.
 * FFTW3
   * Support for FFTW3 as FFTW_fftw3 and IFFTW_fftw3 classes.
   * FFT and IFFT processings inherits from the faster enabled 
     implementation on the compile options (fftw3, fftw2, oura).
   * All the FFT implementations including the generic 'FFT' are
     available to the Processing Factory (and thus in NetEditor).
   * FFT and IFFT default sizes are set to 1024 instead 0.